[feat]: [CDS-72708]: separate command unit for service and overrides (#49916)
* [feat]: [CDS-72708]: separate command unit for service and overrides

* [feat]: [CDS-72708]: added unit progress for service and overrides

* [feat]: [CDS-72708] : using logcallback SERVICE_STEP_COMMAND_UNIT in manifest step v2

* [fix]: [CDS-72708] : revert unrelated changes

* [fix]: [CDS-72708] : revert unrelated changes 2

* [fix]: [CDS-72708] : revert unrelated changes 2

* [fix]: [CDS-72708] : remove wild card impport

* [fix]: [CDS-72708] : revert unrelated changes

* [feat]: [CDS-72708] : pr comments

* [feat]: [CDS-72708] : fix message

* [feat]: [CDS-72708] : junit fix